# mud

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  diesel.toml  go.mod  go.sum  sqlc.yaml
.env/: sample-env-file
cmd/mud/: main.go
cmd/mud/cmd/: root.go
cmd/mudctl/: main.go
cmd/mudctl/cmd/: load.go  root.go  serve.go
cmd/mudctl/internal/: api.go
cmd/mudctl/internal/config/: config.go
data/worlds/devgalaxy/: devgalaxy.json
internal/accounts/repository/: models.go  querier.go
internal/repository/: game.sql.go  querier.go  system.sql.go
logic/: Cargo.toml
logic/src/: lib.rs
logic/src/abilities/: ability.rs  ability_scores.rs  detailed_ability_score.rs  mod.rs
logic/src/entities/: character.rs
logic/src/game_data/: game_data.rs
logic/src/races/: mod.rs  race.rs  race_loader.rs
logic/src/utilities/: dice_roller.rs  expression_parser.rs  mod.rs
migrations/: 001_initial.down.sql  001_initial.up.sql  002_static-data.up.sql  003_item-type.up.sql  20241207190736_initial.up.sql
migrations/2024-12-18-215704_initial_schema/: down.sql
migrations/2024-12-23-185544_static-data/: up.sql
migrations/2024-12-23-211110_item-type/: up.sql
migrations/2024-12-24-152835_item-code-and-price/: up.sql
migrations/2025-01-01-125513_world-code/: up.sql
migrations/2025-01-02-202449_enemies/: down.sql  up.sql
migrations/2025-01-03-194628_characters-revised/: up.sql
migrations/2025-01-13-172713_character-classes/: down.sql  up.sql
migrations/2025-01-15-170712_class-feature-codes/: up.sql
migrations/2025-03-04-174013_modify_users/: up.sql
migrations/2025-03-04-210211_user_entitlements/: up.sql
migrations/2025-03-05-185437_user_roles/: up.sql
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/types/: business_logic.rs  character.rs  character_class.rs  item.rs  mod.rs  signature.rs  valid.rs  world.rs
server/: Cargo.toml  readme.md
server/src/: app_state.rs  main.rs
server/src/api/: mod.rs  rest.rs
server/src/api/auth/: login.rs  mod.rs
server/src/api/game/: character_classes.rs  items.rs  mod.rs  worlds.rs
server/src/api/player/: mod.rs  whoami.rs
server/src/db/: character_class_feature_repo.rs  character_class_repo.rs  connection.rs  game_schema.rs  item_category_repo.rs  item_repo.rs  mod.rs  models.rs  player_entitlements_repo.rs  player_schema.rs  system_schema.rs  system_user_repo.rs  world_repo.rs
sql/: schema.sql
sql/queries/: game.sql  system.sql
tools/: Cargo.toml
tools/src/: main.rs
tools/src/game/: character_class.rs  enemy.rs  game_object.rs  item.rs  mod.rs  spec.rs  world.rs
(+13 files in other folders)
