[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
uuid = { version = "1.11.0",  features = ["serde", "v4"]}
diesel-derive-enum = "1.0"