[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
uuid = { version = "1.11.0",  features = ["serde", "v4"]}
diesel-derive-enum = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0" 
axum =  { version="0.7.9", features=["tracing"]}
tower = "0.5.2"
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"] }
hyper = "0.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tower-http = { version = "0.6.1", features = ["trace"] }
protocol = { path="../protocol" }