[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
protocol = { path = "../protocol" }
walkdir = "2.3"
serde_json = "1.0.134"
reqwest = "0.12.12"
tokio = { version = "1.0", features = ["full"] }
